# fa-chess

./: .coverage  .gitattributes  .gitignore  llms-full.txt  main.py  main_window_bottom.txt  main_window_top.txt  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
assets/: puzzle.parquet
docs/: buscadores_veneno.md
src/: cli.py  config.py  converter.py  main.py
src/core/: analysis_service.py  app_db.py  config_service.py  db_manager.py  eco.py  engine_service.py  engine_utils.py  engine_worker.py  game_controller.py  import_service.py  opening_service.py  puzzle_manager.py  utils.py  workers.py  workers_append_run.txt  (+1 more)
src/ui/: board.py  (+9 more)
tests/: conftest.py  test_app_db.py  test_append_pgn.py  test_board_usability.py  test_cli.py  test_cli_converter.py  test_cli_converter_comprehensive.py  test_converter.py  test_converter_robustness.py  test_database_functionality.py  test_database_maintenance.py  test_database_permissions.py  test_database_sorting.py  test_database_ux.py  test_db_logic_signals.py  test_db_manager.py  test_db_operations.py  test_eco.py  test_engine_integration.py  test_full_analysis.py  test_game_controller.py  test_game_flow.py  test_logic_buster.py  test_logic_core.py  test_main.py  test_package_integrity.py  test_persistence.py  test_pgn_export.py  test_player_analytics.py  test_position_search.py  test_position_search_logic.py  test_puzzle_manager.py  test_search_dialog.py  test_transposition.py  test_tree_auto_refresh.py  test_tree_filtering.py  test_tree_usability.py  test_ui_interactions.py  test_utils.py  test_ux_complete_flow.py  (+4 more)
(+45 files in other folders)
